--- a/package.json
+++ b/package.json
@@ -1,13 +1,20 @@
 {
-  "name": "cm_frontend",
+  "name": "cm-frontend",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "immer": "^1.8.0",
     "react": "^16.6.3",
+    "react-datepicker": "^2.0.0",
     "react-dom": "^16.6.3",
-    "react-scripts": "2.1.1"
+    "react-redux": "^5.1.1",
+    "react-router-dom": "^4.3.1",
+    "react-scripts": "2.1.1",
+    "redux": "^4.0.1"
   },
   "scripts": {
+    "build-css": "node-sass-chokidar src/scss/index.scss src/index.css --watch",
+    "app": "npm-run-all -p build-css start",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -21,5 +28,9 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "node-sass-chokidar": "^1.3.4",
+    "npm-run-all": "^4.1.3"
+  }
 }
