--- a/package.json
+++ b/package.json
@@ -3,14 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "bootstrap": "^4.1.3",
+    "font-awesome": "^4.7.0",
     "immer": "^1.8.0",
     "latest-version": "^4.0.0",
+    "prop-types": "^15.6.2",
     "react": "^16.6.3",
     "react-datepicker": "^2.0.0",
     "react-dom": "^16.6.3",
     "react-redux": "^5.1.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.1",
+    "reactstrap": "^6.5.0",
     "redux": "^4.0.1"
   },
   "scripts": {
