--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "font-awesome": "^4.7.0",
     "immer": "^1.8.0",
     "latest-version": "^4.0.0",
+    "moment": "^2.22.2",
     "prop-types": "^15.6.2",
     "react": "^16.6.3",
     "react-datepicker": "^2.0.0",
