--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.1",
     "reactstrap": "^6.5.0",
-    "redux": "^4.0.1"
+    "redux": "^4.0.1",
+    "redux-promise": "^0.6.0"
   },
   "scripts": {
     "build-css": "node-sass-chokidar src/scss/index.scss src/index.css --watch",
