--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "moment": "^2.22.2",
     "prop-types": "^15.6.2",
     "react": "^16.6.3",
+    "react-chips": "^0.8.0",
     "react-datepicker": "^2.0.0",
     "react-dom": "^16.6.3",
     "react-rating": "^1.6.0",
