--- a/package.json
+++ b/package.json
@@ -5,12 +5,14 @@
   "dependencies": {
     "axios": "^0.18.0",
     "bootstrap": "^4.1.3",
+    "chart": "^0.1.2",
     "font-awesome": "^4.7.0",
     "immer": "^1.8.0",
     "latest-version": "^4.0.0",
     "moment": "^2.22.2",
     "prop-types": "^15.6.2",
     "react": "^16.6.3",
+    "react-chartjs-2": "^2.7.4",
     "react-chips": "^0.8.0",
     "react-datepicker": "^2.0.0",
     "react-dom": "^16.6.3",
