--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "axios": "^0.18.0",
     "bootstrap": "^4.1.3",
     "chart": "^0.1.2",
+    "chart.js": "^2.7.3",
     "font-awesome": "^4.7.0",
     "immer": "^1.8.0",
     "latest-version": "^4.0.0",
