--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "moment": "^2.22.2",
     "prop-types": "^15.6.2",
     "react": "^16.6.3",
+    "react-accessible-accordion": "^2.4.5",
     "react-chartjs-2": "^2.7.4",
     "react-chips": "^0.8.0",
     "react-datepicker": "^2.0.0",
