--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "chart.js": "^2.7.3",
     "font-awesome": "^4.7.0",
     "immer": "^1.8.0",
+    "jquery": "^3.3.1",
     "latest-version": "^4.0.0",
     "moment": "^2.22.2",
     "prop-types": "^15.6.2",
