--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "animejs": "^3.0.1",
     "axios": "^0.18.0",
     "bootstrap": "^4.1.3",
     "chart": "^0.1.2",
@@ -22,7 +23,8 @@
     "react-rating": "^1.6.0",
     "react-redux": "^5.1.1",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "2.1.1",
+    "react-scripts": "^2.1.5",
+    "react-transition-group": "^2.6.0",
     "reactstrap": "^6.5.0",
     "redux": "^4.0.1",
     "redux-promise": "^0.6.0"
