finish HomePage & Implement Fortoget PWD

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "jquery": "^3.3.1",
     "latest-version": "^4.0.0",
     "moment": "^2.22.2",
+    "owl.carousel2": "^2.2.1",
     "prop-types": "^15.6.2",
     "react": "^16.6.3",
     "react-accessible-accordion": "^2.4.5",
@@ -20,10 +21,14 @@
     "react-chips": "^0.8.0",
     "react-datepicker": "^2.0.0",
     "react-dom": "^16.6.3",
+    "react-flickity-component": "^3.2.0",
+    "react-owl-carousel": "^2.3.1",
+    "react-owl-carousel2": "^0.3.0",
     "react-rating": "^1.6.0",
     "react-redux": "^5.1.1",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "^2.1.5",
+    "react-scripts": "^2.1.8",
+    "react-slideshow-image": "^1.1.2",
     "react-transition-group": "^2.6.0",
     "reactstrap": "^6.5.0",
     "redux": "^4.0.1",
