--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "react-router-dom": "^4.3.1",
     "react-scripts": "^2.1.8",
     "react-slideshow-image": "^1.1.2",
+    "react-tabs": "^3.0.0",
+    "react-toggled": "^1.2.7",
     "react-transition-group": "^2.6.0",
     "reactstrap": "^6.5.0",
     "redux": "^4.0.1",
