--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-accessible-accordion": "^2.4.5",
     "react-chartjs-2": "^2.7.4",
     "react-chips": "^0.8.0",
+    "react-date-range": "^1.0.0-beta",
     "react-datepicker": "^2.0.0",
     "react-dom": "^16.6.3",
     "react-flickity-component": "^3.2.0",
