--- a/package.json
+++ b/package.json
@@ -23,10 +23,12 @@
     "react-datepicker": "^2.0.0",
     "react-dom": "^16.6.3",
     "react-flickity-component": "^3.2.0",
+    "react-items-carousel": "^2.3.2",
     "react-owl-carousel": "^2.3.1",
     "react-owl-carousel2": "^0.3.0",
     "react-rating": "^1.6.0",
     "react-redux": "^5.1.1",
+    "react-responsive-modal": "^3.6.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "^2.1.8",
     "react-slideshow-image": "^1.1.2",
