--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^3.9.3",
+    "@pismo/react-currency-input": "^2.0.2",
     "animejs": "^3.0.1",
     "axios": "^0.18.0",
     "bootstrap": "^4.1.3",
@@ -13,10 +15,13 @@
     "jquery": "^3.3.1",
     "latest-version": "^4.0.0",
     "moment": "^2.22.2",
+    "muicss": "^0.9.41",
     "owl.carousel2": "^2.2.1",
+    "pretty-checkbox": "^3.0.3",
     "prop-types": "^15.6.2",
     "react": "^16.6.3",
     "react-accessible-accordion": "^2.4.5",
+    "react-bar-loader": "^1.0.0",
     "react-chartjs-2": "^2.7.4",
     "react-chips": "^0.8.0",
     "react-date-range": "^1.0.0-beta",
