--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^3.9.3",
+    "@material-ui/icons": "3.0.2",
     "@pismo/react-currency-input": "^2.0.2",
     "animejs": "^3.0.1",
     "axios": "^0.18.0",
