--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@material-ui/core": "^3.9.3",
     "@material-ui/icons": "3.0.2",
     "@pismo/react-currency-input": "^2.0.2",
+    "@trendmicro/react-dropdown": "^1.3.0",
     "animejs": "^3.0.1",
     "axios": "^0.18.0",
     "bootstrap": "^4.1.3",
