--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-router-dom": "^4.3.1",
     "react-scripts": "^2.1.8",
     "react-slideshow-image": "^1.1.2",
+    "react-spinner-material": "^1.1.1",
     "react-tabs": "^3.0.0",
     "react-toggled": "^1.2.7",
     "react-transition-group": "^2.6.0",
