Gear History Page Calendar Update

--- a/package.json
+++ b/package.json
@@ -24,12 +24,16 @@
     "react": "^16.6.3",
     "react-accessible-accordion": "^2.4.5",
     "react-bar-loader": "^1.0.0",
+    "react-big-calendar": "^0.20.4",
     "react-chartjs-2": "^2.7.4",
     "react-chips": "^0.8.0",
     "react-date-range": "^1.0.0-beta",
     "react-datepicker": "^2.0.0",
+    "react-day-picker": "^7.3.0",
     "react-dom": "^16.6.3",
     "react-flickity-component": "^3.2.0",
+    "react-helmet": "^5.2.0",
+    "react-intl": "^2.8.0",
     "react-items-carousel": "^2.3.2",
     "react-owl-carousel": "^2.3.1",
     "react-owl-carousel2": "^0.3.0",
