--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "@material-ui/icons": "3.0.2",
     "@pismo/react-currency-input": "^2.0.2",
     "@trendmicro/react-dropdown": "^1.3.0",
+    "@zendeskgarden/react-loaders": "^0.4.2",
+    "@zendeskgarden/react-theming": "^3.2.1",
     "animejs": "^3.0.1",
     "axios": "^0.18.0",
     "bootstrap": "^4.1.3",
@@ -20,8 +22,8 @@
     "muicss": "^0.9.41",
     "owl.carousel2": "^2.2.1",
     "pretty-checkbox": "^3.0.3",
-    "prop-types": "^15.6.2",
-    "react": "^16.6.3",
+    "prop-types": "^15.7.2",
+    "react": "^16.8.6",
     "react-accessible-accordion": "^2.4.5",
     "react-bar-loader": "^1.0.0",
     "react-big-calendar": "^0.20.4",
@@ -30,11 +32,12 @@
     "react-date-range": "^1.0.0-beta",
     "react-datepicker": "^2.0.0",
     "react-day-picker": "^7.3.0",
-    "react-dom": "^16.6.3",
+    "react-dom": "^16.8.6",
     "react-flickity-component": "^3.2.0",
     "react-helmet": "^5.2.0",
     "react-intl": "^2.8.0",
     "react-items-carousel": "^2.3.2",
+    "react-loading": "^2.0.3",
     "react-owl-carousel": "^2.3.1",
     "react-owl-carousel2": "^0.3.0",
     "react-rating": "^1.6.0",
@@ -45,11 +48,13 @@
     "react-slideshow-image": "^1.1.2",
     "react-spinner-material": "^1.1.1",
     "react-tabs": "^3.0.0",
+    "react-toasts": "^3.0.3",
     "react-toggled": "^1.2.7",
     "react-transition-group": "^2.6.0",
     "reactstrap": "^6.5.0",
     "redux": "^4.0.1",
-    "redux-promise": "^0.6.0"
+    "redux-promise": "^0.6.0",
+    "styled-components": "^4.2.0"
   },
   "scripts": {
     "build-css": "node-sass-chokidar src/scss/index.scss src/index.css --watch",
