--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bootstrap": "^4.1.3",
     "chart": "^0.1.2",
     "chart.js": "^2.7.3",
+    "creditcard.js": "^2.1.6",
     "font-awesome": "^4.7.0",
     "immer": "^1.8.0",
     "jquery": "^3.3.1",
@@ -37,6 +38,7 @@
     "react-helmet": "^5.2.0",
     "react-intl": "^2.8.0",
     "react-items-carousel": "^2.3.2",
+    "react-load-script": "0.0.6",
     "react-loading": "^2.0.3",
     "react-owl-carousel": "^2.3.1",
     "react-owl-carousel2": "^0.3.0",
