update core/actions, reducers

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "font-awesome": "^4.7.0",
     "immer": "^1.8.0",
     "jquery": "^3.3.1",
+    "keymirror": "^0.1.1",
     "latest-version": "^4.0.0",
     "moment": "^2.22.2",
     "muicss": "^0.9.41",
@@ -39,6 +40,7 @@
     "react-intl": "^2.8.0",
     "react-items-carousel": "^2.3.2",
     "react-load-script": "0.0.6",
+    "react-loader-spinner": "^2.3.0",
     "react-loading": "^2.0.3",
     "react-owl-carousel": "^2.3.1",
     "react-owl-carousel2": "^0.3.0",
