--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "chart.js": "^2.7.3",
     "creditcard.js": "^2.1.6",
     "font-awesome": "^4.7.0",
+    "form-serialize": "^0.7.2",
     "immer": "^1.8.0",
     "jquery": "^3.3.1",
     "keymirror": "^0.1.1",
@@ -48,6 +49,7 @@
     "react-redux": "^5.1.1",
     "react-responsive-modal": "^3.6.0",
     "react-router-dom": "^4.3.1",
+    "react-router-redux": "^4.0.8",
     "react-scripts": "^2.1.8",
     "react-slideshow-image": "^1.1.2",
     "react-spinner-material": "^1.1.1",
