--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-load-script": "0.0.6",
     "react-loader-spinner": "^2.3.0",
     "react-loading": "^2.0.3",
+    "react-notifications": "^1.4.3",
     "react-owl-carousel": "^2.3.1",
     "react-owl-carousel2": "^0.3.0",
     "react-rating": "^1.6.0",
