--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -15,3 +15,13 @@ pipelines:
           - npm run build-css
           - npm run build
           - echo "Deploy Finished."
+  branches:
+     develop:
+       - step:
+           caches:
+             - node
+           script: # Modify the commands below to build your repository.
+             - npm install
+             - npm run build-css
+             - npm run build
+             - echo "Deploy Finished on Staging."
