--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "reactstrap": "^6.5.0",
     "redux": "^4.0.1",
     "redux-promise": "^0.6.0",
+    "rodal": "^1.6.3",
     "styled-components": "^4.2.0"
   },
   "scripts": {
