--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -37,8 +37,8 @@ pipelines:
                variables:
                  AWS_ACCESS_KEY_ID: $AWS_ACCESS_KEY_ID
                  AWS_SECRET_ACCESS_KEY: $AWS_SECRET_ACCESS_KEY
-                 AWS_DEFAULT_REGION: "us-east-2"
-                 S3_BUCKET: "creative-market-frontend"
+                 AWS_DEFAULT_REGION: "us-east-1"
+                 S3_BUCKET: "staging.creative.market"
                  LOCAL_PATH: "build"
                  ACL: "public-read"
                  CACHE_CONTROL: "max-age=3600"
