bitbucket-pipelines.yml edited online with Bitbucket

--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -16,8 +16,8 @@ pipelines:
           - npm run build-css
           - npm run build
   branches:
-     develop:
-       - step:
+      master:
+         - step:
              name: Build and Test
              caches:
                - node
@@ -27,21 +27,50 @@ pipelines:
                - npm run build
              artifacts:
                - build/**
-       - step:
-           name: Deploy
-           deployment: staging
-           caches:
-             - node
-           script: # Modify the commands below to build your repository.
-             - pipe: atlassian/aws-s3-deploy:0.2.1
-               variables:
-                 AWS_ACCESS_KEY_ID: $AWS_ACCESS_KEY_ID
-                 AWS_SECRET_ACCESS_KEY: $AWS_SECRET_ACCESS_KEY
-                 AWS_DEFAULT_REGION: "us-east-1"
-                 S3_BUCKET: "staging.creative.market"
-                 LOCAL_PATH: "build"
-                 ACL: "public-read"
-                 CACHE_CONTROL: "max-age=3600"
-                 EXPIRES: "2018-10-01T00:00:00+00:00"
-                 DELETE_FLAG: "true"
-                 EXTRA_ARGS: "--follow-symlinks"
+         - step:
+             name: Deploy
+             deployment: staging
+             caches:
+               - node
+             script: # Modify the commands below to build your repository.
+               - pipe: atlassian/aws-s3-deploy:0.2.1
+                 variables:
+                   AWS_ACCESS_KEY_ID: $AWS_ACCESS_KEY_ID
+                   AWS_SECRET_ACCESS_KEY: $AWS_SECRET_ACCESS_KEY
+                   AWS_DEFAULT_REGION: "us-east-1"
+                   S3_BUCKET: "staging.creative.market"
+                   LOCAL_PATH: "build"
+                   ACL: "public-read"
+                   CACHE_CONTROL: "max-age=3600"
+                   EXPIRES: "2018-10-01T00:00:00+00:00"
+                   DELETE_FLAG: "true"
+                   EXTRA_ARGS: "--follow-symlinks"
+      develop:
+         - step:
+             name: Build and Test
+             caches:
+               - node
+             script:
+               - npm install
+               - npm run build-css
+               - npm run build
+             artifacts:
+               - build/**
+         - step:
+             name: Deploy
+             deployment: staging
+             caches:
+               - node
+             script:
+               - pipe: atlassian/aws-s3-deploy:0.2.1
+                 variables:
+                   AWS_ACCESS_KEY_ID: $AWS_ACCESS_KEY_ID
+                   AWS_SECRET_ACCESS_KEY: $AWS_SECRET_ACCESS_KEY
+                   AWS_DEFAULT_REGION: "us-east-1"
+                   S3_BUCKET: "www.creative.market"
+                   LOCAL_PATH: "build"
+                   ACL: "public-read"
+                   CACHE_CONTROL: "max-age=3600"
+                   EXPIRES: "2018-10-01T00:00:00+00:00"
+                   DELETE_FLAG: "true"
+                   EXTRA_ARGS: "--follow-symlinks"
