--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "react-router-dom": "^4.3.1",
     "react-router-redux": "^4.0.8",
     "react-scripts": "^2.1.8",
+    "react-sizes": "^2.0.0",
     "react-slideshow-image": "^1.1.2",
     "react-spinner-material": "^1.1.1",
     "react-tabs": "^3.0.0",
