--- a/package.json
+++ b/package.json
@@ -62,7 +62,8 @@
     "redux": "^4.0.1",
     "redux-promise": "^0.6.0",
     "rodal": "^1.6.3",
-    "styled-components": "^4.2.0"
+    "styled-components": "^4.2.0",
+    "lodash": "latest"
   },
   "scripts": {
     "build-css-watch": "node-sass-chokidar src/scss/index.scss src/index.css --watch",
