--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@zendeskgarden/react-loaders": "^0.4.2",
     "@zendeskgarden/react-theming": "^3.2.1",
     "animejs": "^3.0.1",
+    "autosuggest-highlight": "^3.1.1",
     "axios": "^0.18.0",
     "bootstrap": "^4.1.3",
     "chart": "^0.1.2",
@@ -21,6 +22,7 @@
     "jquery": "^3.3.1",
     "keymirror": "^0.1.1",
     "latest-version": "^4.0.0",
+    "lodash": "latest",
     "moment": "^2.22.2",
     "muicss": "^0.9.41",
     "owl.carousel2": "^2.2.1",
@@ -28,6 +30,7 @@
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-accessible-accordion": "^2.4.5",
+    "react-autosuggest": "^9.4.3",
     "react-bar-loader": "^1.0.0",
     "react-big-calendar": "^0.20.4",
     "react-chartjs-2": "^2.7.4",
@@ -39,6 +42,7 @@
     "react-flickity-component": "^3.2.0",
     "react-helmet": "^5.2.0",
     "react-intl": "^2.8.0",
+    "react-isolated-scroll": "^0.1.1",
     "react-items-carousel": "^2.3.2",
     "react-load-script": "0.0.6",
     "react-loader-spinner": "^2.3.0",
@@ -62,8 +66,7 @@
     "redux": "^4.0.1",
     "redux-promise": "^0.6.0",
     "rodal": "^1.6.3",
-    "styled-components": "^4.2.0",
-    "lodash": "latest"
+    "styled-components": "^4.2.0"
   },
   "scripts": {
     "build-css-watch": "node-sass-chokidar src/scss/index.scss src/index.css --watch",
