--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "react-loader-spinner": "^2.3.0",
     "react-loading": "^2.0.3",
     "react-notifications": "^1.4.3",
+    "react-notifications-component": "^1.1.1",
     "react-owl-carousel": "^2.3.1",
     "react-owl-carousel2": "^0.3.0",
     "react-rating": "^1.6.0",
