--- a/package.json
+++ b/package.json
@@ -55,7 +55,7 @@
     "react-notifications-component": "^1.1.1",
     "react-owl-carousel": "^2.3.1",
     "react-owl-carousel2": "^0.3.0",
-    "react-rating": "^1.6.0",
+    "react-rating": "latest",
     "react-redux": "^5.1.1",
     "react-responsive-modal": "^3.6.0",
     "react-router-dom": "^4.3.1",
@@ -64,6 +64,7 @@
     "react-sizes": "^2.0.0",
     "react-slideshow-image": "^1.1.2",
     "react-spinner-material": "^1.1.1",
+    "react-star-rating-lite": "0.0.11",
     "react-tabs": "^3.0.0",
     "react-toggled": "^1.2.7",
     "react-transition-group": "^2.6.0",
