--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-big-calendar": "^0.20.4",
     "react-chartjs-2": "^2.7.4",
     "react-chips": "^0.8.0",
+    "react-contenteditable": "^3.2.6",
     "react-date-range": "^1.0.0-beta",
     "react-datepicker": "^2.0.0",
     "react-day-picker": "^7.3.0",
