--- a/package.json
+++ b/package.json
@@ -69,7 +69,8 @@
     "reactstrap": "^6.5.0",
     "redux": "^4.0.1",
     "redux-promise": "^0.6.0",
-    "styled-components": "^4.2.0"
+    "styled-components": "^4.2.0",
+    "talkjs": "^0.9.0"
   },
   "scripts": {
     "build-css-watch": "node-sass-chokidar src/scss/index.scss src/index.css --watch",
