--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "animejs": "^3.0.1",
     "autosuggest-highlight": "^3.1.1",
     "axios": "^0.18.0",
+    "bank.js": "0.0.3",
     "bootstrap": "^4.1.3",
     "chart": "^0.1.2",
     "chart.js": "^2.7.3",
