--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^3.9.3",
-    "@material-ui/icons": "3.0.2",
+    "@material-ui/icons": "^3.0.2",
+    "@material-ui/styles": "^4.1.0",
     "@pismo/react-currency-input": "^2.0.2",
     "@trendmicro/react-dropdown": "^1.3.0",
     "@zendeskgarden/react-loaders": "^0.4.2",
@@ -17,7 +18,9 @@
     "browser-image-compression": "^1.0.5",
     "chart": "^0.1.2",
     "chart.js": "^2.7.3",
+    "clsx": "^1.0.4",
     "creditcard.js": "^2.1.6",
+    "downshift": "^3.2.10",
     "font-awesome": "^4.7.0",
     "form-serialize": "^0.7.2",
     "immer": "^1.8.0",
@@ -60,6 +63,7 @@
     "react-router-dom": "^4.3.1",
     "react-router-redux": "^4.0.8",
     "react-scripts": "^2.1.8",
+    "react-select": "^3.0.4",
     "react-sizes": "^2.0.0",
     "react-slideshow-image": "^1.1.2",
     "react-spinner-material": "^1.1.1",
