bitbucket-pipelines.yml edited online with Bitbucket

--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -38,7 +38,7 @@ pipelines:
                    AWS_ACCESS_KEY_ID: $AWS_ACCESS_KEY_ID
                    AWS_SECRET_ACCESS_KEY: $AWS_SECRET_ACCESS_KEY
                    AWS_DEFAULT_REGION: "us-east-1"
-                   S3_BUCKET: "creative.market"
+                   S3_BUCKET: "www.creative.market"
                    LOCAL_PATH: "build"
                    ACL: "public-read"
                    CACHE_CONTROL: "max-age=3600"
