--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "postscribe": "^2.0.8",
     "pretty-checkbox": "^3.0.3",
     "prop-types": "^15.7.2",
+    "query-string": "^6.7.0",
     "react": "^16.8.6",
     "react-accessible-accordion": "^2.4.5",
     "react-autosuggest": "^9.4.3",
@@ -46,6 +47,7 @@
     "react-datepicker": "^2.0.0",
     "react-day-picker": "^7.3.0",
     "react-dom": "^16.8.6",
+    "react-dropdown-select": "^3.0.0",
     "react-flickity-component": "^3.2.0",
     "react-helmet": "^5.2.0",
     "react-intl": "^2.8.0",
@@ -64,6 +66,7 @@
     "react-router-redux": "^4.0.8",
     "react-scripts": "^2.1.8",
     "react-select": "^3.0.4",
+    "react-select-country-list": "^2.0.1",
     "react-sizes": "^2.0.0",
     "react-slideshow-image": "^1.1.2",
     "react-spinner-material": "^1.1.1",
