--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "animejs": "^3.0.1",
     "autosuggest-highlight": "^3.1.1",
     "axios": "^0.18.0",
-    "bank.js": "0.0.3",
     "bootstrap": "^4.1.3",
     "browser-image-compression": "^1.0.5",
     "chart": "^0.1.2",
@@ -23,6 +22,7 @@
     "downshift": "^3.2.10",
     "font-awesome": "^4.7.0",
     "form-serialize": "^0.7.2",
+    "ibantools": "^2.1.0",
     "immer": "^1.8.0",
     "jquery": "^3.3.1",
     "keymirror": "^0.1.1",
