--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "react-load-script": "0.0.6",
     "react-loader-spinner": "^2.3.0",
     "react-loading": "^2.0.3",
+    "react-meta-tags": "^0.7.4",
     "react-notifications": "^1.4.3",
     "react-notifications-component": "^1.1.1",
     "react-owl-carousel": "^2.3.1",
@@ -68,8 +69,10 @@
     "react-scripts": "^2.1.8",
     "react-select": "^3.0.4",
     "react-select-country-list": "^2.0.1",
+    "react-share": "^3.0.0",
     "react-sizes": "^2.0.0",
     "react-slideshow-image": "^1.1.2",
+    "react-social-sharing": "^3.0.1",
     "react-spinner-material": "^1.1.1",
     "react-star-rating-lite": "0.0.11",
     "react-tabs": "^3.0.0",
