--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "react-date-range": "^1.0.0-beta",
     "react-datepicker": "^2.0.0",
     "react-day-picker": "^7.3.0",
+    "react-document-meta": "^3.0.0-beta.2",
     "react-dom": "^16.8.6",
     "react-dropdown-select": "^3.0.0",
     "react-flickity-component": "^3.2.0",
