GDPR & cookie concent notification added

--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-chartjs-2": "^2.7.4",
     "react-chips": "^0.8.0",
     "react-contenteditable": "^3.2.6",
+    "react-cookie-consent": "^2.3.1",
     "react-date-range": "^1.0.0-beta",
     "react-datepicker": "^2.0.0",
     "react-day-picker": "^7.3.0",
