--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "react-document-meta": "^3.0.0-beta.2",
     "react-dom": "^16.8.6",
     "react-dropdown-select": "^3.0.0",
+    "react-dropzone": "^10.1.5",
     "react-flickity-component": "^3.2.0",
     "react-google-places-autocomplete": "^1.4.1",
     "react-helmet": "^5.2.0",
