payment terms of service

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "keymirror": "^0.1.1",
     "latest-version": "^4.0.0",
     "lodash": "latest",
+    "marked": "^0.6.2",
     "moment": "^2.22.2",
     "muicss": "^0.9.41",
     "owl.carousel2": "^2.2.1",
@@ -60,6 +61,7 @@
     "react-load-script": "0.0.6",
     "react-loader-spinner": "^2.3.0",
     "react-loading": "^2.0.3",
+    "react-md-file": "^2.0.0",
     "react-meta-tags": "^0.7.4",
     "react-notifications": "^1.4.3",
     "react-notifications-component": "^1.1.1",
