--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "keymirror": "^0.1.1",
     "latest-version": "^4.0.0",
     "lodash": "latest",
+    "mangopay-cardregistration-js-kit": "^1.2.2",
+    "mangopay-client-react": "^1.2.1",
     "marked": "^0.6.2",
     "moment": "^2.22.2",
     "muicss": "^0.9.41",
@@ -110,6 +112,7 @@
   ],
   "devDependencies": {
     "node-sass-chokidar": "^1.3.4",
-    "npm-run-all": "^4.1.3"
+    "npm-run-all": "^4.1.3",
+    "webpack": "^4.28.3"
   }
 }
